--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": [
+    "react",
     [
       "env",
       {
@@ -10,7 +11,6 @@
           ]
         }
       }
-    ],
-    "react"
+    ]
   ]
 }
