--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "Daniel <daniel.dungngo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "build": "SET NODE_ENV=production && webpack -p",
+    "deploy": "yarn build && firebase deploy",
+    "firebase-init": "firebase login && firebase init"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "prop-types": "^15.5.10",
+    "query-string": "^4.3.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1"
@@ -21,7 +25,6 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
-    "duplicate-package-checker-webpack-plugin": "^1.2.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^2.2.0",
@@ -29,11 +32,13 @@
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.0.1",
-    "html-webpack-plugin": "^2.28.0",
+    "firebase-tools": "^3.9.1",
+    "html-webpack-plugin": "^2.29.0",
     "prettier": "^1.4.4",
     "prettier-eslint": "^6.3.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.5.0"
   }
 }
