--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,13 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "headers": [ {
+      "source" : "index_bundle.js",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "max-age=3600"
+      } ]
+    } ]
   }
 }
