--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "webpack-dev-server --open",
     "build": "SET NODE_ENV=production && webpack -p",
     "deploy": "yarn build && firebase deploy",
+    "deploy:update": "firebase deploy",
     "firebase-init": "firebase login && firebase init"
   },
   "dependencies": {
